tests/err02.json.err
Parse error at line 3

001: {
002:       
003: 
     ^
Unexpected end
